created html form of header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Sample.website || Home</title>
 </head>
 <body>
-    
+    <!--Header part-->
+    <header class="header">
+        <div class="banner">
+            <h1>لورم ایپسوم متن ساختگی</h1>
+            <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
+            <a class="btn btn-banner" href="#">محصولات</a>
+        </div>
+    </header>
+    <!--End of header part-->
 </body>
 </html>
