feature part created

--- a/index.html
+++ b/index.html
@@ -1,22 +1,68 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Sample.website || Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Header part-->
     <header class="header">
-        <div class="banner">
-            <h1>لورم ایپسوم متن ساختگی</h1>
-            <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
-            <a class="btn btn-banner" href="#">محصولات</a>
-        </div>
+      <div class="banner">
+        <h1>لورم ایپسوم متن ساختگی</h1>
+        <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
+        <a class="btn btn-banner" href="#">محصولات</a>
+      </div>
     </header>
+    <div class="content-divider"></div>
     <!--End of header part-->
-</body>
+
+    <!--Feature part-->
+    <section class="features clearfix">
+      <article class="feature">
+        <span class="feature-icon">
+          <i class="bi bi-x-diamond-fill"></i>
+        </span>
+        <h4 class="feature-title">لوزم ایپسوم</h4>
+        <p class="feature-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, enim.
+        </p>
+      </article>
+
+      <article class="feature">
+        <span class="feature-icon">
+          <i class="bi bi-symmetry-vertical"></i>
+        </span>
+        <h4 class="feature-title">لوزم ایپسوم</h4>
+        <p class="feature-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, enim.
+        </p>
+      </article>
+
+      <article class="feature">
+        <span class="feature-icon">
+          <i class="bi bi-subtract"></i>
+        </span>
+        <h4 class="feature-title">لوزم ایپسوم</h4>
+        <p class="feature-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, enim.
+        </p>
+      </article>
+
+      <article class="feature">
+        <span class="feature-icon">
+          <i class="bi bi-server"></i>
+        </span>
+        <h4 class="feature-title">لوزم ایپسوم</h4>
+        <p class="feature-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, enim.
+        </p>
+      </article>
+    </section>
+    <!--End of feature part-->
+
+  </body>
 </html>
