about part in html created

--- a/index.html
+++ b/index.html
@@ -64,5 +64,27 @@
     </section>
     <!--End of feature part-->
 
+    <!--About Us part-->
+    <section class="clearfix">
+      <!--abour image-->
+      <article class="about-image">
+        <div class="about-image-container">
+          <img src="./images/about-bcg.jpg" alt="about-image" />
+        </div>
+      </article>
+      <!--about info-->
+      <article class="about-info">
+        <!--section title-->
+        <div class="section-title">
+          <h3>درباره ما</h3>
+          <h2>لورم ایپسوم</h2>
+        </div>
+        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+
+        <a class="btn about-btn" href="#">درباره ما</a>
+      </article>
+    </section>
+    <!--End of About Us part-->
   </body>
 </html>
