about part in main.css created

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <!--End of feature part-->
 
     <!--About Us part-->
-    <section class="clearfix">
+    <section class="section-center clearfix">
       <!--abour image-->
       <article class="about-image">
         <div class="about-image-container">
-          <img src="./images/about-bcg.jpg" alt="about-image" />
+          <img class="about-picture" src="./images/about-bcg.jpg" alt="about-image" />
         </div>
       </article>
       <!--about info-->
