--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       <!--abour image-->
       <article class="about-image">
         <div class="about-image-container">
-          <img class="about-picture" src="./images/about-bcg.jpg" alt="about-image" />
+          <img
+            class="about-picture"
+            src="./images/about-bcg.jpg"
+            alt="about-image"
+          />
         </div>
       </article>
       <!--about info-->
@@ -79,12 +83,65 @@
           <h3>درباره ما</h3>
           <h2>لورم ایپسوم</h2>
         </div>
-        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p class="about-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing.
+        </p>
+        <p class="about-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing.
+        </p>
 
         <a class="btn about-btn" href="#">درباره ما</a>
       </article>
     </section>
     <!--End of About Us part-->
+
+    <!--Products part-->
+    <section class="section-center products clearfix">
+      <article class="products-info">
+        <div class="section-title">
+          <h3>محصولات</h3>
+          <h2>لورم ایپسوم</h2>
+        </div>
+        <p class="product-text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi maxime
+          suscipit dignissimos illum qui provident consequuntur, nesciunt odio
+          animi voluptates, quas delectus autem magnam natus quod a est neque.
+          Mollitia.
+        </p>
+        <a class="btn btn-products" href="#">مشاهده محصولات</a>
+      </article>
+      <article class="products-cards clearfix">
+        <div>
+          <img
+            class="product-image"
+            src="./images/product-1.jpg"
+            alt="product-image"
+          />
+          <h4 class="product-title">لورم ایپسوم متن</h4>
+          <h4 class="product-price">65,000 <span>تومان</span></h4>
+        </div>
+
+        <div>
+          <img
+            class="product-image"
+            src="./images/product-2.jpg"
+            alt="product-image"
+          />
+          <h4 class="product-title">لورم ایپسوم متن</h4>
+          <h4 class="product-price">59,000 <span>تومان</span></h4>
+        </div>
+
+        <div>
+          <img
+            class="product-image"
+            src="./images/product-3.jpg"
+            alt="product-image"
+          />
+          <h4 class="product-title">لورم ایپسوم متن</h4>
+          <h4 class="product-price">369,000 <span>تومان</span></h4>
+        </div>
+      </article>
+    </section>
+    <!--End of Product part-->
   </body>
 </html>
