products part in main.css created

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!--About Us part-->
     <section class="section-center clearfix">
-      <!--abour image-->
+      <!--about image-->
       <article class="about-image">
         <div class="about-image-container">
           <img
@@ -90,57 +90,59 @@
           Lorem ipsum dolor sit amet consectetur adipisicing.
         </p>
 
-        <a class="btn about-btn" href="#">درباره ما</a>
+        <a class="btn product-btn" href="#">درباره ما</a>
       </article>
     </section>
     <!--End of About Us part-->
 
     <!--Products part-->
-    <section class="section-center products clearfix">
-      <article class="products-info">
-        <div class="section-title">
-          <h3>محصولات</h3>
-          <h2>لورم ایپسوم</h2>
-        </div>
-        <p class="product-text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi maxime
-          suscipit dignissimos illum qui provident consequuntur, nesciunt odio
-          animi voluptates, quas delectus autem magnam natus quod a est neque.
-          Mollitia.
-        </p>
-        <a class="btn btn-products" href="#">مشاهده محصولات</a>
-      </article>
-      <article class="products-cards clearfix">
-        <div>
-          <img
-            class="product-image"
-            src="./images/product-1.jpg"
-            alt="product-image"
-          />
-          <h4 class="product-title">لورم ایپسوم متن</h4>
-          <h4 class="product-price">65,000 <span>تومان</span></h4>
-        </div>
+    <section class="products">
+      <div class="section-center clearfix">
+        <article class="products-info">
+          <div class="section-title">
+            <h3>محصولات</h3>
+            <h2>لورم ایپسوم</h2>
+          </div>
+          <p class="product-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi
+            maxime suscipit dignissimos illum qui provident consequuntur,
+            nesciunt odio animi voluptates, quas delectus autem magnam natus
+            quod a est neque. Mollitia.
+          </p>
+          <a class="btn btn-products" href="#">مشاهده محصولات</a>
+        </article>
+        <article class="products-cards clearfix">
+          <div class="product">
+            <img
+              class="product-image"
+              src="./images/product-1.jpg"
+              alt="product-image"
+            />
+            <h4 class="product-title">لورم ایپسوم متن</h4>
+            <h4 class="product-price">65,000 <span>تومان</span></h4>
+          </div>
 
-        <div>
-          <img
-            class="product-image"
-            src="./images/product-2.jpg"
-            alt="product-image"
-          />
-          <h4 class="product-title">لورم ایپسوم متن</h4>
-          <h4 class="product-price">59,000 <span>تومان</span></h4>
-        </div>
+          <div class="product">
+            <img
+              class="product-image"
+              src="./images/product-2.jpg"
+              alt="product-image"
+            />
+            <h4 class="product-title">لورم ایپسوم متن</h4>
+            <h4 class="product-price">59,000 <span>تومان</span></h4>
+          </div>
 
-        <div>
-          <img
-            class="product-image"
-            src="./images/product-3.jpg"
-            alt="product-image"
-          />
-          <h4 class="product-title">لورم ایپسوم متن</h4>
-          <h4 class="product-price">369,000 <span>تومان</span></h4>
-        </div>
-      </article>
+          <div class="product">
+            <img
+              class="product-image"
+              src="./images/product-3.jpg"
+              alt="product-image"
+            />
+            <h4 class="product-title">لورم ایپسوم متن</h4>
+            <h4 class="product-price">369,000 <span>تومان</span></h4>
+          </div>
+        </article>
+      </div>
     </section>
     <!--End of Product part-->
   </body>
