--- a/index.html
+++ b/index.html
@@ -145,5 +145,78 @@
       </div>
     </section>
     <!--End of Product part-->
+
+    <!--Services part-->
+    <section class="section-center">
+      <div class="section-title services-title">
+        <h3>خدمات</h3>
+        <h2>لورم ایپسوم</h2>
+      </div>
+      <div class="clearfix">
+        <article class="service-card">
+          <div class="service-img-container">
+            <img
+              class="service-img"
+              src="./images/product-1.jpg"
+              alt="single service"
+            />
+            <span class="service-icon">
+              <i class="bi bi-app-indicator"></i>
+            </span>
+          </div>
+          <div class="service-info">
+            <h4>لورم ایپسوم</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+              quasi qui unde. Consequatur, perferendis quibusdam.
+            </p>
+            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-img-container">
+            <img
+              class="service-img"
+              src="./images/product-2.jpg"
+              alt="single service"
+            />
+            <span class="service-icon">
+              <i class="bi bi-bar-chart-line"></i>
+            </span>
+          </div>
+          <div class="service-info">
+            <h4> لورم ایپسوم</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+              quasi qui unde. Consequatur, perferendis quibusdam.
+            </p>
+            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-img-container">
+            <img
+              class="service-img"
+              src="./images/product-3.jpg"
+              alt="single service"
+            />
+            <span class="service-icon">
+              <i class="bi bi-subtract"></i>
+            </span>
+          </div>
+          <div class="service-info">
+            <h4>لورم ایپسوم</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+              quasi qui unde. Consequatur, perferendis quibusdam.
+            </p>
+            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!--End of Services part-->
   </body>
 </html>
