--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </span>
           </div>
           <div class="service-info">
-            <h4> لورم ایپسوم</h4>
+            <h4>لورم ایپسوم</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
               quasi qui unde. Consequatur, perferendis quibusdam.
@@ -218,5 +218,73 @@
       </div>
     </section>
     <!--End of Services part-->
+
+    <!--Contact us part-->
+    <section class="contact">
+      <div class="section-center">
+        <article class="contact-info">
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="bi-bi-geo-alt-fill"></i>
+              </span>
+              آدرس
+            </h4>
+            <h4 class="contact-text">
+              Lorem ipsum dolor sit amet consectetur
+              <br />
+              adipisicing elit. Optio, vero.
+            </h4>
+          </div>
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="bi-bi-envelope-fill"></i>
+              </span>
+              ایمیل
+            </h4>
+            <h4 class="contact-text">email@email.com</h4>
+          </div>
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="bi-bi-telephone-fill"></i>
+              </span>
+              شماره تماس
+            </h4>
+            <h4 class="contact-text">0910 000 00 00</h4>
+          </div>
+        </article>
+
+        <article class="contact-form">
+          <h3>تماس با ما</h3>
+          <form action="">
+            <div class="form-group">
+              <input
+                class="form-control"
+                type="text"
+                name="name"
+                placeholder="نام"
+              />
+              <input
+                class="form-control"
+                type="email"
+                name="email"
+                placeholder="ایمیل"
+              />
+              <textarea
+                class="form-control"
+                name="message"
+                placeholder="متن پیام"
+                id=""
+                rows="5"
+              ></textarea>
+            </div>
+            <button class="btn submit-btn" type="submit">ارسال پیام</button>
+          </form>
+        </article>
+      </div>
+    </section>
+    <!--End of ontact Us part-->
   </body>
 </html>
