css style for contact us part created

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
 
     <!--Contact us part-->
     <section class="contact">
-      <div class="section-center">
+      <div class="section-center clearfix">
         <article class="contact-info">
           <div class="contact-item">
             <h4 class="contact-title">
               <span class="contact-icon">
-                <i class="bi-bi-geo-alt-fill"></i>
+                <i class="bi bi-geo-alt-fill"></i>
               </span>
               آدرس
             </h4>
@@ -239,7 +239,7 @@
           <div class="contact-item">
             <h4 class="contact-title">
               <span class="contact-icon">
-                <i class="bi-bi-envelope-fill"></i>
+                <i class="bi bi-envelope-fill"></i>
               </span>
               ایمیل
             </h4>
@@ -248,7 +248,7 @@
           <div class="contact-item">
             <h4 class="contact-title">
               <span class="contact-icon">
-                <i class="bi-bi-telephone-fill"></i>
+                <i class="bi bi-telephone-fill"></i>
               </span>
               شماره تماس
             </h4>
@@ -285,6 +285,9 @@
         </article>
       </div>
     </section>
-    <!--End of ontact Us part-->
+    <!--End of Contact Us part-->
+
+    <!--Footer part-->
+    <!--End of Footer part-->
   </body>
 </html>
