css and html code for navbar prepared

--- a/index.html
+++ b/index.html
@@ -9,8 +9,53 @@
     <title>Sample.website || Home</title>
   </head>
   <body>
+    <!--Navbar part-->
+    <span class="nav-btn" id="nav-btn">
+      <i class="bi bi-list-nested"></i>
+    </span>
+    <nav class="navbar" id="navbar">
+      <div class="navbar-header">
+        <span class="nav-close" id="nav-close">
+          <i class="bi bi-x"></i>
+        </span>
+      </div>
+      <ul class="nav-items">
+        <li>
+          <a href="index.html">
+            <i class="bi bi-house-fill"></i>
+            صفحه اصلی
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <i class="bi bi-info-circle-fill"></i>
+            درباره ما
+          </a>
+        </li>
+        <li>
+          <a href="products.html">
+            <i class="bi bi-box-seam-fill"></i>
+            محصولات
+          </a>
+        </li>
+        <li>
+          <a href="services.html">
+            <i class="bi bi-calendar2-check-fill"></i>
+            خدمات
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <i class="bi bi-chat-right-dots-fill"></i>
+            تماس با ما
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!--End of Navbar part-->
+
     <!--Header part-->
-    <header class="header">
+    <header class="header showNav">
       <div class="banner">
         <h1>لورم ایپسوم متن ساختگی</h1>
         <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
@@ -288,6 +333,27 @@
     <!--End of Contact Us part-->
 
     <!--Footer part-->
+    <footer class="footer">
+      <div class="section-center">
+        <div class="social-icon">
+          <a class="social-icon" href="#">
+            <i class="bi bi-whatsapp"></i>
+          </a>
+          <a class="social-icon" href="#">
+            <i class="bi bi-twitter"></i>
+          </a>
+          <a class="social-icon" href="#">
+            <i class="bi bi-instagram"></i>
+          </a>
+        </div>
+        <h4 class="footer-text">
+          <span>ParhamOnline</span>
+          کلیه حقوق این قالب نزد پرهام آنلاین محفوظ است و هرگونه کپی برداری از
+          آن پیگرد قانونی دارد
+        </h4>
+      </div>
+    </footer>
     <!--End of Footer part-->
+    <script src="./js/app.js"></script>
   </body>
 </html>
