--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/bootstrap-icons.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Sample.website || Home</title>
+    <title>Sample.website || contact us</title>
   </head>
   <body>
     <!--Navbar part-->
@@ -57,7 +57,7 @@
     <!--Header part-->
     <header class="header">
       <div class="banner">
-        <h1>لورم ایپسوم متن ساختگی</h1>
+        <h1>تماس با ما</h1>
         <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
         <a class="btn btn-banner" href="#">محصولات</a>
       </div>
@@ -108,162 +108,6 @@
       </article>
     </section>
     <!--End of feature part-->
-
-    <!--About Us part-->
-    <section class="section-center clearfix">
-      <!--about image-->
-      <article class="about-image">
-        <div class="about-image-container">
-          <img
-            class="about-picture"
-            src="./images/about-bcg.jpg"
-            alt="about-image"
-          />
-        </div>
-      </article>
-      <!--about info-->
-      <article class="about-info">
-        <!--section title-->
-        <div class="section-title">
-          <h3>درباره ما</h3>
-          <h2>لورم ایپسوم</h2>
-        </div>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing.
-        </p>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing.
-        </p>
-
-        <a class="btn product-btn" href="#">درباره ما</a>
-      </article>
-    </section>
-    <!--End of About Us part-->
-
-    <!--Products part-->
-    <section class="products">
-      <div class="section-center clearfix">
-        <article class="products-info">
-          <div class="section-title">
-            <h3>محصولات</h3>
-            <h2>لورم ایپسوم</h2>
-          </div>
-          <p class="product-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi
-            maxime suscipit dignissimos illum qui provident consequuntur,
-            nesciunt odio animi voluptates, quas delectus autem magnam natus
-            quod a est neque. Mollitia.
-          </p>
-          <a class="btn btn-products" href="#">مشاهده محصولات</a>
-        </article>
-        <article class="products-cards clearfix">
-          <div class="product">
-            <img
-              class="product-image"
-              src="./images/product-1.jpg"
-              alt="product-image"
-            />
-            <h4 class="product-title">لورم ایپسوم متن</h4>
-            <h4 class="product-price">65,000 <span>تومان</span></h4>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="./images/product-2.jpg"
-              alt="product-image"
-            />
-            <h4 class="product-title">لورم ایپسوم متن</h4>
-            <h4 class="product-price">59,000 <span>تومان</span></h4>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="./images/product-3.jpg"
-              alt="product-image"
-            />
-            <h4 class="product-title">لورم ایپسوم متن</h4>
-            <h4 class="product-price">369,000 <span>تومان</span></h4>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!--End of Product part-->
-
-    <!--Services part-->
-    <section class="section-center">
-      <div class="section-title services-title">
-        <h3>خدمات</h3>
-        <h2>لورم ایپسوم</h2>
-      </div>
-      <div class="clearfix">
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-1.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-app-indicator"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-2.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-bar-chart-line"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-3.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-subtract"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!--End of Services part-->
-
     <!--Contact us part-->
     <section class="contact">
       <div class="section-center clearfix">
