--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/bootstrap-icons.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Sample.website || Home</title>
+    <title>Sample.website || products</title>
   </head>
   <body>
     <!--Navbar part-->
@@ -57,7 +57,7 @@
     <!--Header part-->
     <header class="header">
       <div class="banner">
-        <h1>لورم ایپسوم متن ساختگی</h1>
+        <h1>محصولات</h1>
         <h2>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
         <a class="btn btn-banner" href="#">محصولات</a>
       </div>
@@ -108,38 +108,6 @@
       </article>
     </section>
     <!--End of feature part-->
-
-    <!--About Us part-->
-    <section class="section-center clearfix">
-      <!--about image-->
-      <article class="about-image">
-        <div class="about-image-container">
-          <img
-            class="about-picture"
-            src="./images/about-bcg.jpg"
-            alt="about-image"
-          />
-        </div>
-      </article>
-      <!--about info-->
-      <article class="about-info">
-        <!--section title-->
-        <div class="section-title">
-          <h3>درباره ما</h3>
-          <h2>لورم ایپسوم</h2>
-        </div>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing.
-        </p>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing.
-        </p>
-
-        <a class="btn product-btn" href="#">درباره ما</a>
-      </article>
-    </section>
-    <!--End of About Us part-->
-
     <!--Products part-->
     <section class="products">
       <div class="section-center clearfix">
@@ -190,148 +158,6 @@
       </div>
     </section>
     <!--End of Product part-->
-
-    <!--Services part-->
-    <section class="section-center">
-      <div class="section-title services-title">
-        <h3>خدمات</h3>
-        <h2>لورم ایپسوم</h2>
-      </div>
-      <div class="clearfix">
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-1.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-app-indicator"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-2.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-bar-chart-line"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-
-        <article class="service-card">
-          <div class="service-img-container">
-            <img
-              class="service-img"
-              src="./images/product-3.jpg"
-              alt="single service"
-            />
-            <span class="service-icon">
-              <i class="bi bi-subtract"></i>
-            </span>
-          </div>
-          <div class="service-info">
-            <h4>لورم ایپسوم</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              quasi qui unde. Consequatur, perferendis quibusdam.
-            </p>
-            <a class="btn btn-service" href="#">مشاهده بیشتر</a>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!--End of Services part-->
-
-    <!--Contact us part-->
-    <section class="contact">
-      <div class="section-center clearfix">
-        <article class="contact-info">
-          <div class="contact-item">
-            <h4 class="contact-title">
-              <span class="contact-icon">
-                <i class="bi bi-geo-alt-fill"></i>
-              </span>
-              آدرس
-            </h4>
-            <h4 class="contact-text">
-              Lorem ipsum dolor sit amet consectetur
-              <br />
-              adipisicing elit. Optio, vero.
-            </h4>
-          </div>
-          <div class="contact-item">
-            <h4 class="contact-title">
-              <span class="contact-icon">
-                <i class="bi bi-envelope-fill"></i>
-              </span>
-              ایمیل
-            </h4>
-            <h4 class="contact-text">email@email.com</h4>
-          </div>
-          <div class="contact-item">
-            <h4 class="contact-title">
-              <span class="contact-icon">
-                <i class="bi bi-telephone-fill"></i>
-              </span>
-              شماره تماس
-            </h4>
-            <h4 class="contact-text">0910 000 00 00</h4>
-          </div>
-        </article>
-
-        <article class="contact-form">
-          <h3>تماس با ما</h3>
-          <form action="">
-            <div class="form-group">
-              <input
-                class="form-control"
-                type="text"
-                name="name"
-                placeholder="نام"
-              />
-              <input
-                class="form-control"
-                type="email"
-                name="email"
-                placeholder="ایمیل"
-              />
-              <textarea
-                class="form-control"
-                name="message"
-                placeholder="متن پیام"
-                id=""
-                rows="5"
-              ></textarea>
-            </div>
-            <button class="btn submit-btn" type="submit">ارسال پیام</button>
-          </form>
-        </article>
-      </div>
-    </section>
-    <!--End of Contact Us part-->
-
     <!--Footer part-->
     <footer class="footer">
       <div class="section-center">
